# spectdd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  __init__.py  constitution.md  download  generic.md  go.md  java.md  plan.md  pyproject.toml  tasks.md  typescript.md
.claude-plugin/: marketplace.json  plugin.json
commands/: constitution.md  implement.md  plan.md  review.md  specify.md  tasks.md
hooks/: hooks.json
skills/spectdd-architect/: SKILL.md  architect.md  java.md  python.md
skills/spectdd-workflow/: SKILL.md
src/spectdd/: __init__.py  __main__.py  cli.py
src/spectdd/assets/commands/: constitution.md  implement.md  tasks.md
src/spectdd/assets/skills/: typescript.md
src/spectdd/assets/templates/: constitution-template.md  output-style.md
tests/: test_cli.py
