[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectdd"
version = "0.9.1"
description = "Spec-Driven + Test-Driven Development workflow for AI coding assistants, with human approval gates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Javier", email = "jjvadillo78@gmail.com" }]
keywords = ["sdd", "tdd", "spec-driven", "test-driven", "ai", "claude", "cursor", "copilot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/jjvadillo/spectdd"

[project.scripts]
spectdd = "spectdd.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/spectdd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
