[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectdd"
version = "1.0.0"
description = "Spec-Driven + Test-Driven Development workflow for AI coding assistants, with human approval gates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Javier", email = "jjvadillo78@gmail.com" }]
keywords = ["sdd", "tdd", "spec-driven", "test-driven", "ai", "claude", "cursor", "copilot"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/jjvadillo/spectdd"

[project.scripts]
spectdd = "spectdd.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/spectdd"]

# The plugin directories at the repo root are the single source of truth;
# the wheel re-exposes them as package data for `spectdd init`.
[tool.hatch.build.targets.wheel.force-include]
"commands" = "spectdd/assets/commands"
"skills/spectdd-architect" = "spectdd/assets/skills"
"templates" = "spectdd/assets/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
